// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`App Component appLoaded === false Should match the snapshot 1`] = `
<div>
  <nav
    className="navbar navbar-light"
  >
    <div
      className="container"
    >
      <a
        className="navbar-brand"
        href="/"
        onClick={[Function]}
      >
        test appname
      </a>
      <ul
        className="nav navbar-nav pull-xs-right"
      >
        <li
          className="nav-item"
        >
          <a
            className="nav-link"
            href="/"
            onClick={[Function]}
          >
            Home
          </a>
        </li>
        <li
          className="nav-item"
        >
          <a
            className="nav-link"
            href="/editor"
            onClick={[Function]}
          >
            <i
              className="ion-compose"
            />
             New Post
          </a>
        </li>
        <li
          className="nav-item"
        >
          <a
            className="nav-link"
            href="/settings"
            onClick={[Function]}
          >
            <i
              className="ion-gear-a"
            />
             Settings
          </a>
        </li>
        <li
          className="nav-item"
        >
          <a
            className="nav-link"
            href="/@Test User"
            onClick={[Function]}
          >
            <img
              alt="Test User"
              className="user-pic"
              src=""
            />
            Test User
          </a>
        </li>
      </ul>
    </div>
  </nav>
</div>
`;

exports[`App Component appLoaded === true Should match the snapshot 1`] = `
<div>
  <nav
    className="navbar navbar-light"
  >
    <div
      className="container"
    >
      <a
        className="navbar-brand"
        href="/"
        onClick={[Function]}
      >
        test appname
      </a>
      <ul
        className="nav navbar-nav pull-xs-right"
      >
        <li
          className="nav-item"
        >
          <a
            className="nav-link"
            href="/"
            onClick={[Function]}
          >
            Home
          </a>
        </li>
        <li
          className="nav-item"
        >
          <a
            className="nav-link"
            href="/editor"
            onClick={[Function]}
          >
            <i
              className="ion-compose"
            />
             New Post
          </a>
        </li>
        <li
          className="nav-item"
        >
          <a
            className="nav-link"
            href="/settings"
            onClick={[Function]}
          >
            <i
              className="ion-gear-a"
            />
             Settings
          </a>
        </li>
        <li
          className="nav-item"
        >
          <a
            className="nav-link"
            href="/@Test User"
            onClick={[Function]}
          >
            <img
              alt="Test User"
              className="user-pic"
              src=""
            />
            Test User
          </a>
        </li>
      </ul>
    </div>
  </nav>
  <div
    className="home-page"
    id="home-page"
  >
    <div
      className="banner"
      id="banner"
    >
      <div
        className="container"
      >
        <h1
          className="logo-font"
        >
          test appname
        </h1>
        <p>
          A place to share your knowledge.
        </p>
      </div>
    </div>
    <div
      className="container page"
    >
      <div
        className="row"
      >
        <div
          className="col-md-9"
          id="main-view"
        >
          <div
            className="feed-toggle"
          >
            <ul
              className="nav nav-pills outline-active"
            >
              <li
                className="nav-item"
              >
                <a
                  className="nav-link"
                  href=""
                  onClick={[Function]}
                >
                  Global Feed
                </a>
              </li>
            </ul>
          </div>
          <div
            className="article-preview"
          >
            Loading...
          </div>
        </div>
        <div
          className="col-md-3"
        >
          <div
            className="sidebar"
          >
            <p>
              Popular Tags
            </p>
            <div
              className="tag-list"
              id="tag-list"
            >
              <a
                className="tag-default tag-pill"
                href=""
                onClick={[Function]}
              >
                tag1
              </a>
              <a
                className="tag-default tag-pill"
                href=""
                onClick={[Function]}
              >
                tag2
              </a>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;
